--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       href="https://cdn.vectorstock.com/i/500p/73/79/analysis-stock-market-black-icon-on-white-vector-31617379.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
       content="Smart Stocks is a MERN stack-based app that predicts stock market trends using machine learning. Stay informed and make smarter investment decisions with our easy-to-use platform."
